# rofi-qalc

./: .gitignore  PKGBUILD  README.md  meson.build  meson.options
include/: log_message.h  options.h  parsing.h  qalc.h  qalc_thread.h  rofi_hacks.h
scripts/: install_rename.sh
src/: log_message.cpp  options.cpp  parsing.cpp  rofi_qalc.cpp  rofi_qalc_thread.cpp  rofi_shim.cpp  rofiqalc.cpp
